# virtual-twin

./: .gitignore  CHANGELOG.md  CLAUDE.md  NOTES_AND_FEATURE_PIPELINE.md  README.md  TODO.md  mkdocs.yml  pyproject.toml  refac2.md  refac3.md  refactor_plan.md  scratch_notes.md
.semgrep/: audit_scan.json  baseline_scan.json
.semgrep/rules/: audit-catchall.yaml  hardcoded-values.yaml  legacy-name-check.yaml
config/: constants.yaml  defaults.yaml
config/behaviors/: default_6phase.yaml
config/equipment/: filler.yaml  inspector.yaml  packer.yaml  palletizer.yaml
config/materials/: cosmetics.yaml
config/products/: fresh_toothpaste_5oz.yaml
config/runs/: baseline_8hr.yaml  baseline_graph_8hr.yaml
config/scenarios/: baseline.yaml  baseline_graph.yaml
config/sources/: infinite_raw.yaml
config/topologies/: cosmetics_line.yaml  cosmetics_line_graph.yaml
docs/: architecture.md  changelog.md  contributing.md  index.md  superset_integration.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/reference/: api.md  cli.md  config-schema.md  glossary.md
docs/tutorials/: basic-simulation.md  buffer-optimization.md  custom-equipment.md  oee-analysis.md
docs/user-guide/: configuration.md  outputs.md  products-economics.md  running-simulations.md  scenarios.md
grafana/dashboards/: virtual_twin.json
src/simpy_demo/: SPEC.md  __init__.py  __main__.py  aggregation.py  baseline.py  config.py  digital_twin.py  engine.py  equipment.py  loader.py  models.py  run.py  scenarios.py  simulation.py  topology.py
src/virtual_twin/: __init__.py  __main__.py  aggregation.py  config.py  engine.py  equipment.py  loader.py  run.py
superset/: README.md  metadata.yaml
superset/charts/: availability_by_machine.yaml  availability_over_time.yaml  buffer_levels.yaml  cumulative_production.yaml  defects_over_time.yaml  gross_margin_over_time.yaml  loss_pareto.yaml  margin_by_run.yaml  oee_by_machine.yaml  production_over_time.yaml  (+5 more)
tests/: conftest.py  test_aggregation.py  test_cli.py  test_integration.py  test_optimization.py  test_outputs.py  test_reality_checks.py  test_storage.py
(+61 files in other folders)
