[project]
name = "simpy-demo"
version = "0.9.0"
description = ""
authors = [
    {name = "Your Name",email = "michael.craig.fitzgerald@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "simpy (>=4.1.1,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
package-mode = true
packages = [{include = "simpy_demo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
